# 3nibbles

./: .gitignore  CMakeLists.txt  README.md  main.cpp  postman_collection.json  sonar-project.properties  team.txt
.github/workflows/: ci-cd.yml
deploy/: equipo4.service
include/: algorithms.h
src/: algorithms.cpp  server.cpp
tests/unit/: test_algorithms.cpp
